fix: use static import UTF-8